# josso1

./: .envrc  .gitignore  Makefile  README.md  flake.nix  pom.xml
agents/: pom.xml
agents/josso-agent-shared/: pom.xml
agents/josso-agentj14-shared/: pom.xml
agents/josso-alfresco-agent/: pom.xml
agents/josso-apache22-agent/: Makefile.am  configure  configure.in  makemake  pom.xml  unix-src.xml  windows-src.xml
agents/josso-apache22-agent/client/: Makefile.am  SSOIdentityProviderSOAPBinding.nsmap  configure.in  josso-1.2.h  soapC.c  soapClient.c  soapClientLib.c  soapH.h  soapStub.h  stdsoap2.c  stdsoap2.h
agents/josso-apache22-agent/mod_auth_josso/: Makefile.am  configure.in  mod_auth_josso.c
agents/josso-apache22-agent/rmm_hash/: Makefile.am  configure.in  rmm_hash.c  rmm_hash.h
agents/josso-applet-agent/: pom.xml
agents/josso-gatein-agent/: pom.xml
agents/josso-geronimo2-agent/: pom.xml
agents/josso-iserver-agent/: pom.xml
agents/josso-jaspi-agent/: pom.xml
agents/josso-jboss32-agent/: pom.xml
agents/josso-jboss40-agent/: pom.xml
agents/josso-jboss42-agent/: pom.xml
agents/josso-jboss5-agent/: pom.xml
agents/josso-jboss64eap-agent/: pom.xml
agents/josso-jboss7-agent/: pom.xml
agents/josso-jbportal27-agent/: .classpath  .project  pom.xml
agents/josso-jetty6-agent/: pom.xml
agents/josso-laravel-agent/: README.Md  pom.xml
agents/josso-liferay-agent/: pom.xml
agents/josso-liferay5-agent/: pom.xml
agents/josso-liferay6-agent/: pom.xml
agents/josso-microsoft-agent/: pom.xml
agents/josso-php-agent/: pom.xml
agents/josso-phpBB-agent/: pom.xml
agents/josso-servlet-agent/: pom.xml
agents/josso-tomcat50-agent/: pom.xml
agents/josso-tomcat55-agent/: pom.xml
agents/josso-tomcat60-agent/: pom.xml
agents/josso-tomcat70-agent/: pom.xml
agents/josso-tomcat80-agent/: pom.xml
agents/josso-tomcat85-agent/: pom.xml
agents/josso-wasce2-agent/: josso.license.txt  pom.xml
agents/josso-weblogic10-agent/: pom.xml
agents/josso-weblogic12-agent/: pom.xml
agents/josso-weblogic14-agent/: pom.xml
agents/josso-weblogic81-agent/: pom.xml
agents/josso-weblogic92-agent/: pom.xml
applications/: pom.xml
applications/josso-console/: pom.xml
components/: pom.xml
components/josso-appctx-secdomainmatcher/: pom.xml
components/josso-basic-authscheme/: pom.xml
components/josso-bind-authscheme/: pom.xml
components/josso-db-assertionstore/: pom.xml
components/josso-db-identitystore/: pom.xml
components/josso-db-sessionstore/: pom.xml
components/josso-default-assertionidgen/: pom.xml
components/josso-default-assertionmgr/: pom.xml
components/josso-default-auditmgr/: pom.xml
components/josso-default-authenticator/: pom.xml
components/josso-default-eventmgr/: pom.xml
components/josso-default-eventmgrclient/: pom.xml
components/josso-default-identitymgr/: pom.xml
components/josso-default-identityprovider/: pom.xml
components/josso-default-passwordgenerator/: pom.xml
components/josso-default-passwordmanager/: pom.xml
components/josso-default-secdomainregistry/: pom.xml
components/josso-default-secdomainselector/: pom.xml
components/josso-default-sessionidgen/: pom.xml
components/josso-default-sessionmgr/: pom.xml
components/josso-email-passworddistributor/: pom.xml
components/josso-jasperserver-authn-v6/: pom.xml
components/josso-ldap-identitystore/: pom.xml
components/josso-logger-audittrailhandler/: pom.xml
components/josso-memory-assertionstore/: pom.xml
components/josso-memory-identitystore/: pom.xml
components/josso-memory-sessionstore/: pom.xml
components/josso-ntlm-authscheme/: pom.xml
components/josso-protocol/: pom.xml
components/josso-protocol-client/: pom.xml
components/josso-protocol-jaxws-client/: pom.xml
components/josso-rememberme-authscheme/: pom.xml
components/josso-seraph-extension/: pom.xml
components/josso-serialized-sessionstore/: pom.xml
components/josso-simple-lostpasswordprocess/: pom.xml
components/josso-simple-secdomainmatcher/: pom.xml
components/josso-spring-security/: pom.xml
components/josso-spring-security-v2/: pom.xml
components/josso-spring-security-v3/: pom.xml
components/josso-strong-authscheme/: pom.xml
components/josso-vhost-secdomainmatcher/: pom.xml
components/josso-virtual-identitystore/: pom.xml
components/josso-ws/: pom.xml
components/josso-ws-v1_2/: pom.xml
core/: pom.xml
core/josso-agent/: pom.xml
core/josso-agent-j14compat/: pom.xml
core/josso-common/: pom.xml
core/josso-core/: pom.xml
distributions/: pom.xml
distributions/josso/: pom.xml
distributions/josso-agents-bin/: pom.xml
distributions/josso-agents-j14bin/: pom.xml
distributions/josso-gateway-web/: pom.xml
examples/: pom.xml
tests/: pom.xml
tooling/: pom.xml
(+1427 files in other folders)
