ssoidentityproviderlibdir=$(prefix)/services/echo
ssoidentityproviderlib_LTLIBRARIES = libssoidentityprovider.la
libssoidentityprovider_la_SOURCES = \
soapC.c \
soapClient.c \
stdsoap2.c \
soapH.h \
soapStub.h
libssoidentityprovider_la_LDFLAGS = -static
libssoidentityprovider_la_LIBADD  =
INCLUDES = 
AM_CFLAGS = -fPIC 
    
